--- a/Prisma/package.json
+++ b/Prisma/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "main": "index.js",
-  "scripts": {
+  "scripts": { "dev": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
